--- a/main.ipynb
+++ b/main.ipynb
@@ -9,19 +9,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from pandas_profiling import ProfileReport\n",
+    "# from pandas_profiling import ProfileReport\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.tree import DecisionTreeRegressor\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.neural_network import MLPRegressor\n",
     "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\n",
     "import numpy as np\n",
-    "from sklearn.preprocessing import StandardScaler"
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.datasets import fetch_california_housing"
    ]
   },
   {
@@ -51,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -222,37 +224,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = df_encoded.drop(columns=['median_house_value'])  \n",
+    "y = df_encoded['median_house_value']\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "housing = fetch_california_housing()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(housing.data, housing.target, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Squared Error (MSE) dla regresji liniowej: 4802173538.604159\n",
-      "Mean Squared Error (MSE) dla drzewa decyzyjnego: 5089544884.890054\n",
-      "Mean Squared Error (MSE) dla modelu opartego na sieciach neuronowych: 3570185353.0107675\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Cezary\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:686: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (1000) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n"
+      "Mean Squared Error (MSE) dla regresji liniowej: 0.5558915986952425\n",
+      "Mean Squared Error (MSE) dla drzewa decyzyjnego: 0.25320457943178676\n",
+      "Mean Squared Error (MSE) dla modelu opartego na sieciach neuronowych: 0.6313990874886894\n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "\n",
-    "X = df_encoded.drop(columns=['median_house_value'])  \n",
-    "y = df_encoded['median_house_value']\n",
-    "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
-    "\n",
     "linear_reg = LinearRegression()\n",
-    "decision_tree_reg = DecisionTreeRegressor(max_depth=5, min_samples_split=2, min_samples_leaf=1)\n",
+    "decision_tree_reg = RandomForestRegressor()\n",
     "neural_network_reg = MLPRegressor(hidden_layer_sizes=(100, 50), activation='relu', solver='adam', max_iter=1000)\n",
     "\n",
     "linear_reg.fit(X_train, y_train)\n",
@@ -274,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -282,19 +306,19 @@
      "output_type": "stream",
      "text": [
       "Mean Absolute Error (MAE):\n",
-      "Regresja liniowa: 50413.43330810035\n",
-      "Drzewo decyzyjne: 50571.18306701999\n",
-      "Sieć neuronowa: 41405.62684873046\n",
+      "Regresja liniowa: 0.5332001304956989\n",
+      "Drzewo decyzyjne: 0.32685366124031023\n",
+      "Sieć neuronowa: 0.602894055920684\n",
       "\n",
       "Root Mean Squared Error (RMSE):\n",
-      "Regresja liniowa: 69297.7166911303\n",
-      "Drzewo decyzyjne: 71341.04628395951\n",
-      "Sieć neuronowa: 59751.028049823275\n",
+      "Regresja liniowa: 0.7455813830127751\n",
+      "Drzewo decyzyjne: 0.5031943753976059\n",
+      "Sieć neuronowa: 0.7946062468220908\n",
       "\n",
       "R^2 score:\n",
-      "Regresja liniowa: 0.6488402154431994\n",
-      "Drzewo decyzyjne: 0.6278261352067561\n",
-      "Sieć neuronowa: 0.7389295681814283\n"
+      "Regresja liniowa: 0.5757877060324521\n",
+      "Drzewo decyzyjne: 0.8067743859846794\n",
+      "Sieć neuronowa: 0.5181663908192364\n"
      ]
     }
    ],
@@ -344,7 +368,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
