--- a/jForexTrain.ipynb
+++ b/jForexTrain.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,14 +59,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\cezar\\AppData\\Local\\Temp\\ipykernel_18188\\3584169503.py:1: FutureWarning: The argument 'date_parser' is deprecated and will be removed in a future version. Please use 'date_format' instead, or read your data in as 'object' dtype and then call 'to_datetime'.\n",
+      "C:\\Users\\Cezary\\AppData\\Local\\Temp\\ipykernel_25804\\3584169503.py:1: FutureWarning: The argument 'date_parser' is deprecated and will be removed in a future version. Please use 'date_format' instead, or read your data in as 'object' dtype and then call 'to_datetime'.\n",
       "  df = pd.read_csv('EURPLN_Candlestick_1_h_BID_01.05.2021-30.04.2024.csv', parse_dates=['Gmt time'],\n"
      ]
     }
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +171,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "X_train, X_test, y_train, y_test = train_test_split(reshaped_array, time_series_Value, test_size=0.2, random_state=42)"
    ]
   },
@@ -228,9 +227,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(housing.data, housing.target, test_size=0.2, random_state=42)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -248,25 +245,7 @@
     }
    ],
    "source": [
-    "linear_reg = LinearRegression()\n",
-    "decision_tree_reg = RandomForestRegressor()\n",
-    "neural_network_reg = MLPRegressor(hidden_layer_sizes=(100, 50), activation='relu', solver='adam', max_iter=1000)\n",
-    "\n",
-    "linear_reg.fit(X_train, y_train)\n",
-    "decision_tree_reg.fit(X_train, y_train)\n",
-    "neural_network_reg.fit(X_train, y_train)\n",
-    "\n",
-    "linear_reg_pred = linear_reg.predict(X_test)\n",
-    "decision_tree_reg_pred = decision_tree_reg.predict(X_test)\n",
-    "neural_network_reg_pred = neural_network_reg.predict(X_test)\n",
-    "\n",
-    "linear_reg_mse = mean_squared_error(y_test, linear_reg_pred)\n",
-    "decision_tree_reg_mse = mean_squared_error(y_test, decision_tree_reg_pred)\n",
-    "neural_network_reg_mse = mean_squared_error(y_test, neural_network_reg_pred)\n",
-    "\n",
-    "print(\"Mean Squared Error (MSE) dla regresji liniowej:\", linear_reg_mse)\n",
-    "print(\"Mean Squared Error (MSE) dla drzewa decyzyjnego:\", decision_tree_reg_mse)\n",
-    "print(\"Mean Squared Error (MSE) dla modelu opartego na sieciach neuronowych:\", neural_network_reg_mse)\n"
+    "\n"
    ]
   },
   {
@@ -295,34 +274,7 @@
      ]
     }
    ],
-   "source": [
-    "linear_reg_mae = mean_absolute_error(y_test, linear_reg_pred)\n",
-    "decision_tree_reg_mae = mean_absolute_error(y_test, decision_tree_reg_pred)\n",
-    "neural_network_reg_mae = mean_absolute_error(y_test, neural_network_reg_pred)\n",
-    "\n",
-    "linear_reg_rmse = np.sqrt(mean_squared_error(y_test, linear_reg_pred))\n",
-    "decision_tree_reg_rmse = np.sqrt(mean_squared_error(y_test, decision_tree_reg_pred))\n",
-    "neural_network_reg_rmse = np.sqrt(mean_squared_error(y_test, neural_network_reg_pred))\n",
-    "\n",
-    "linear_reg_r2 = r2_score(y_test, linear_reg_pred)\n",
-    "decision_tree_reg_r2 = r2_score(y_test, decision_tree_reg_pred)\n",
-    "neural_network_reg_r2 = r2_score(y_test, neural_network_reg_pred)\n",
-    "\n",
-    "print(\"Mean Absolute Error (MAE):\")\n",
-    "print(\"Regresja liniowa:\", linear_reg_mae)\n",
-    "print(\"Drzewo decyzyjne:\", decision_tree_reg_mae)\n",
-    "print(\"Sieć neuronowa:\", neural_network_reg_mae)\n",
-    "\n",
-    "print(\"\\nRoot Mean Squared Error (RMSE):\")\n",
-    "print(\"Regresja liniowa:\", linear_reg_rmse)\n",
-    "print(\"Drzewo decyzyjne:\", decision_tree_reg_rmse)\n",
-    "print(\"Sieć neuronowa:\", neural_network_reg_rmse)\n",
-    "\n",
-    "print(\"\\nR^2 score:\")\n",
-    "print(\"Regresja liniowa:\", linear_reg_r2)\n",
-    "print(\"Drzewo decyzyjne:\", decision_tree_reg_r2)\n",
-    "print(\"Sieć neuronowa:\", neural_network_reg_r2)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -341,7 +293,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
